tests/positive/assignement_to_another_variable.c
main() {
    int i, j;
    i = 8;
    j = i;
}
