tests/negative/assignement_to_undefined_variable.c
main() {
    int i;
    i = j;
}

